required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk):
----------------------------

- Fix security exception issue in C# with MSVC2010 (#3438)

- Write out join CONNECTIONTYPE when saving a mapfile. (#3435)

- Fixed attribute queries to use an extent stored (and cached) as part of the queryObj
  rather than the map->extent. (#3424)

- Reverted msLayerWhichItems() to 5.4-like behavior although still supporting
  retrieving all items (#3356,#3342)

- Grid layer: remove drawing of unnecessary gird lines (#3433) 

- Avoid errors and debug output for CONNECTION-less OGR layers in mappool.c
  if they have a tileindex.

- Implement support for raw imagemodes to use NULLVALUE formatoption to set 
  the background value of result images, and to try and mark nodata (#1709)

- Implement support for wcs_rangeset_nullvalue to set NULLVALUE and
  return null value definition in describe coverage result (#655)

- Try to avoid exhausting the color table when rendering 24bit key
  images into 8bit results (#1594)

- Avoid crash, and ensure error report when loading keyimage fails (#1594)

- Improve the handling of simple string comparisons for raster classified
  values (#3425) 

- Generate good SQL when using !BOX! token and no filter. (#3422)

- Implement non-shapefile tileindex support for raster query (#2796).

- Improve support for [red/green/blue] classification expressions for
  raster query (#1021)

- Fixed imageObj->saveImage() sends unnecessary headers (#3418)

- Avoid automatically regenerating maplexer.c (#2310)

- Change rounding rules for average resampling (#1932)

- Implement support for filename encryption per RFC 18 for rasters (#3416)
